--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,14 @@ node_modules/
 # Environment variables
 .env
 .env.local
+.env.production
+.env.development
+
+# API Keys and secrets (NEVER commit these!)
+secrets.json
+config/secrets.json
+*.key
+*.pem
 
 # OS files
 .DS_Store
