--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,18 @@
 [build]
   # Static HTML site with environment variable replacement
-  command = "echo 'Replacing environment variables...' && find . -name '*.js' -type f -exec sed -i \"s/<!-- GA_MEASUREMENT_ID -->/${GA_MEASUREMENT_ID:-G-XXXXXXXXXX}/g\" {} \\; && find . -name '*.js' -type f -exec sed -i \"s/<!-- FORMSPREE_FORM_ID -->/${FORMSPREE_FORM_ID:-YOUR_FORM_ID}/g\" {} \\;"
+  command = "echo 'Replacing environment variables...' && find . -name '*.js' -type f -exec sed -i \"s/<!-- GA_MEASUREMENT_ID -->/${GA_MEASUREMENT_ID:-G-XXXXXXXXXX}/g\" {} \\; && find . -name '*.js' -type f -exec sed -i \"s/<!-- FORMSPREE_FORM_ID -->/${FORMSPREE_FORM_ID:-YOUR_FORM_ID}/g\" {} \\; && find . -name '*.html' -type f -exec sed -i \"s/<!-- DEMO_FIREBASE_API_KEY -->/${DEMO_FIREBASE_API_KEY:-demo-api-key}/g\" {} \\; && find . -name '*.html' -type f -exec sed -i \"s/<!-- DEMO_FIREBASE_AUTH_DOMAIN -->/${DEMO_FIREBASE_AUTH_DOMAIN:-demo.firebaseapp.com}/g\" {} \\; && find . -name '*.html' -type f -exec sed -i \"s/<!-- DEMO_FIREBASE_PROJECT_ID -->/${DEMO_FIREBASE_PROJECT_ID:-demo-project}/g\" {} \\; && find . -name '*.html' -type f -exec sed -i \"s/<!-- DEMO_FIREBASE_STORAGE_BUCKET -->/${DEMO_FIREBASE_STORAGE_BUCKET:-demo.firebasestorage.app}/g\" {} \\; && find . -name '*.html' -type f -exec sed -i \"s/<!-- DEMO_FIREBASE_MESSAGING_SENDER_ID -->/${DEMO_FIREBASE_MESSAGING_SENDER_ID:-123456789}/g\" {} \\; && find . -name '*.html' -type f -exec sed -i \"s/<!-- DEMO_FIREBASE_APP_ID -->/${DEMO_FIREBASE_APP_ID:-1:123456789:web:abcdef}/g\" {} \\; && find . -name '*.html' -type f -exec sed -i \"s/<!-- DEMO_FIREBASE_MEASUREMENT_ID -->/${DEMO_FIREBASE_MEASUREMENT_ID:-G-ABCDEFGHI}/g\" {} \\;"
   publish = "."
 
 # Environment variables for API keys (set these in Netlify dashboard)
 # GA_MEASUREMENT_ID = "your-ga4-measurement-id"
 # FORMSPREE_FORM_ID = "your-formspree-form-id"
+# DEMO_FIREBASE_API_KEY = "your-demo-firebase-api-key"
+# DEMO_FIREBASE_AUTH_DOMAIN = "your-demo-project.firebaseapp.com"
+# DEMO_FIREBASE_PROJECT_ID = "your-demo-project-id"
+# DEMO_FIREBASE_STORAGE_BUCKET = "your-demo-project.firebasestorage.app"
+# DEMO_FIREBASE_MESSAGING_SENDER_ID = "your-messaging-sender-id"
+# DEMO_FIREBASE_APP_ID = "your-firebase-app-id"
+# DEMO_FIREBASE_MEASUREMENT_ID = "your-demo-ga-measurement-id"
 
 # Explicitly disable Next.js plugin
 [build.plugins]
