--- a/netlify.toml
+++ b/netlify.toml
@@ -14,9 +14,9 @@
 # DEMO_FIREBASE_APP_ID = "your-firebase-app-id"
 # DEMO_FIREBASE_MEASUREMENT_ID = "your-demo-ga-measurement-id"
 
-# Explicitly disable Next.js plugin
-[build.plugins]
-  # No plugins for static site
+# Configure secrets scanning to ignore demo Firebase keys (they're intentionally injected)
+[build.environment]
+  SECRETS_SCAN_OMIT_KEYS = "DEMO_FIREBASE_API_KEY,DEMO_FIREBASE_AUTH_DOMAIN,DEMO_FIREBASE_PROJECT_ID,DEMO_FIREBASE_STORAGE_BUCKET,DEMO_FIREBASE_MESSAGING_SENDER_ID,DEMO_FIREBASE_APP_ID,DEMO_FIREBASE_MEASUREMENT_ID"
 
 # Redirects for single page app behavior
 [[redirects]]
